fix navigation (links not showing) bug

--- a/css/index.css
+++ b/css/index.css
@@ -89,11 +89,8 @@ hr {
     color: var(--text-2);
     text-decoration: none;
     font-size: 1.1rem;
-    transition: 0.3s ease-in-out;
 }
-.link:hover {
-    color: #fff;
-}
+
 .nav__right i {
     color: #fff;
 }
